--- a/app/views/static_pages/motorcycle-accidents.html.erb
+++ b/app/views/static_pages/motorcycle-accidents.html.erb
@@ -8,15 +8,43 @@
 		<!-- <h4>Motorcycle Accident Claims &amp; Serious Injuries in Southern Alabama</h4> -->
 	</div>
 </div>
+<div class="clearfix"></div>
 
-<section class="main-content">
-	<h5>Motorcycle Accident Claims &amp; Serious Injuries in Southern Alabama</h5>
-
-	<div class="col-md-6">
+<!-- <div class="banner"> -->
+<div class="boxes">
+	<h3>Motorcycle Accident Claims &amp; Serious Injuries</h3>
+	<div class="b1">
 		<p>Motorcycles are the least protected vehicles on the road, which unfortunately leads to higher injury and death rates than those of traditional motorists. Motorcycle accidents typically result in high medical costs, and demand a successful litigation outcome in order to pay for medical expenses.</p>
-
-		<p>Noel B. Leonard affirms that attorney fees will not exceed the amount awarded from a successful lawsuit, thus ensuring that you have the funds needed to repair your body and your life.</p>
 	</div>
+
+	<div class="b2">
+		<p>If you or a loved one has been in a motorcycle accident in Alabama, you need an accident attorney who understands your pain, and can deliver the legal results you need to recover. In the turbulent aftermath of a devastating motorcycle accident, you need an attorney you can trust to fight for you.</p>
+	</div>
+
+	<div class="b3">
+		<p>As an avid motorcycle enthusiast, Noel B. Leonard understands, and can accommodate this need. His attorney fees will not exceed the amount awarded from a successful lawsuit, thus ensuring that you have the funds needed to repair your body and your life.</p>
+	</div>
+</div>
+
+<section class="content">
+	<div class="text-box">
+		<p>We counsel all motorcyclists to wear a helmet and follow essential safety precautions on the road, as there are many dangerous and negligent drivers out there.</p>
+		<p>In the event that you are in an accident caused by a negligent driver, it is essential that you have as much protection as possible, to prevent life-threatening injuries.</p>
+		<p>While a helmet is no guarantee that a life will be saved, in many cases a helmet has been the difference between life and death.</p>
+	</div>
+
+
+
+		<!-- <h5>Contact Alabama accident attorney, Noel B. Leonard to schedule a consultation, or call (251) 597-0695 if you live in the city of Foley or Baldwin, Mobile or Escambia Counties, and have been in a motorcycle accident.</h5> -->
+	</div>
+
+</section>
+
+
+
+
+
+<!--
 
 	<div class="col-md-6">
 		<h4>As an avid motorcycle enthusiast, Noel B. Leonard understands firsthand how important motorcycle safety is.</h4>
@@ -25,10 +53,8 @@
 			While a helmet is no guarantee that a life will be saved, in many cases a helmet has been the difference between life and death.
 		</p>
 	</div>
-
-		<p>If you or a loved one has been in a devastating motorcycle accident, you need an Alabama accident attorney who understands your pain and suffering, while delivering the legal results you need to be made whole. In the turbulent aftermath of a devastating motorcycle accident, you need an attorney you can trust to fight for you.</p>
-
 		<h5>Contact Alabama accident attorney, Noel B. Leonard to schedule a consultation, or call (251) 597-0695 if you live in the city of Foley or Baldwin, Mobile or Escambia Counties, and have been in a motorcycle accident.</h5>
 	</div>
 
 </section>
+ -->
