--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -5,10 +5,11 @@ $dark: #1a1a1a;
 $gray: #9d9d9d;
 $offwhite: #f5f4f4;
 $hcolor: #252525;
-$navy: #062f45;
 $blue: #0060af;
+// $navy: #062f45;
+$navy:darken($blue, 25%);
 $br-blue: #00aeff;
-$blue2: #0060af;
+$lt-blue: #b2cfe7;
 $tan: #dbd3c7;
 
 $open: 'Open Sans', Arial, sans-serif;
