--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -26,6 +26,7 @@ h1, h2, h3, h4, h5 { font-family: $cinzel; line-height: 1.2em; margin-top:0;}
 p, li {font-family: $lato; line-height:1.4em}
 // a,span {font-family: $lato;}
 p {font-size: 16px;}
+h5 {font-size: 15px;}
 
 .text-center{ text-align: center; }
 .nobg { background-color: transparent;}
