--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -42,6 +42,27 @@
 }
 
 
+.slant-section {
+	@include sec-default();
+	position: relative;
+	padding: 130px 0;
+	top: 0;
+	clear: both;
+
+	&:before {
+		width: 50%;
+		border-bottom: 0 solid $navy;
+		border-top: 600px solid $navy;
+		border-left: 0 solid transparent;
+		border-right: 100px solid transparent;
+		content: "";
+		height: 100%;
+		top: 0;
+		position: absolute;
+	}
+}
+
+
 
 .home {
 	.site-intro{
@@ -70,7 +91,7 @@
 		@include sec-default();
 		padding: $fullsec-padding;
 
-		h3 { margin-bottom: 20px; color: $blue2; text-align: center; width: 60%; @include center-block();
+		h3 { margin-bottom: 20px; color: $blue; text-align: center; width: 60%; @include center-block();
 			span{font-size: .8em}}
 
 		.practice-box {display: inline-block; width: 31%; margin: 0 15px; float: left; padding:25px 30px 15px; text-align: center; color: $white;
@@ -99,19 +120,52 @@
 }
 
 .about {
-	// .cst-header { background-color: $br-blue; padding: 40px 0;background-image: url(image_path('about-noel.jpg'));}
-	.main-content { @include sec-bgimage(); background-image: url(image_path('bcch1.jpg')); background-size: 40%;}
-	.body { width: 55%; float: right;}
+	.cst-header {background-image: url(image_path('courtroom.jpg')); background-position: center center; height:250px; position: relative; z-index: 0;
+		&::before {@include before(); background-color: rgba($navy, .7);}
+		h1, h4 {color: $white; @include tshadow($black); }
+	}
+
+	.leftside {width: 60%; float: left; display: inline-block;text-align: center;
+		h4{margin-bottom:5px; font-weight: bold; }
+		h5 {font-weight: bold; color: $blue; width:80%; @include center-block();}
+		.practice-claims{ width:90%; @include center-block(); padding: 5px 0 20px; }
+		.practice-box {display: inline-block; width: 35%; float: none; margin: 10px auto 5px; padding:10px; text-align: center; background-color: $navy; color: $white;}
+		.pbtext{color: $white; font-size: 16px; margin-bottom: 5px; }
+		.community {@include sec-default(); border: 1px solid $light; padding:15px 0 0; text-align: center;}
+		.charity{display: inline-block; width:23%; float: none;}
+	}
+	.blue-sidebar {width: 35%; float: right; margin-top:2%; display: inline-block; background-color: rgba($lt-blue, .8); padding: 20px 0 10px;
+		h4 {text-align: center; font-weight: bold; margin-bottom: 20px;color: darken($blue, 10%); }
+		ul{padding-left: 30px;}
+		li {font-weight: bold; font-size: 15px; margin-top: 15px; }
+		.icon {width: 30%;@include center-block();}
+	}
 }
 
 .motorcycle-accidents {
-	.header-wrap {@include sec-default(); padding:20px; background-color: $tan;}
-	.cst-header { background-image: url(image_path('bike-claim.jpg')); height: 300px; padding-left: 5%;}
+	.header-wrap {@include sec-default(); padding:0px; background-color: $navy;}
+	.cst-header { background-image: url(image_path('biker.jpg')); height: 250px; padding-left: 5%; background-position: center center;}
 	h1 {text-align: left; color: $white; @include tshadow($black); width: 30%;
 		span {font-size: 1.5em;}}
 
+	.boxes {@include sec-default(); padding: 40px 60px;
+		h3 {text-align: center; margin-bottom:30px;}
+		.b1, .b2, .b3 {display: inline-block; width: 32%; height:200px; font-size: 17px; float: left; padding: 25px 25px 15px; border: 1px solid #dfdfdf;
+			background: -webkit-linear-gradient(-50deg, rgba($light, .85), rgba($light, .3));
+		  background: linear-gradient(-50deg, rgba($light, .85), rgba($light, .3));
+		  p{line-height: 1.5em;}
+		}
+		.b2 {margin: 0 15px;}
+	}
 
-	// .main-content {background-color: $light;}
+	.content{@include sec-default(); background-color: $dark; padding: 40px; @include sec-bgimage();
+		background-image: url(image_path('motorcycle.jpg')); background-size: 70%; background-position: left center;
+
+		.text-box {width:27%; float: right; padding: 15px; color: #dfdfdf;
+		  p{line-height: 1.5em;}
+		}
+	}
+
 }
 
 .auto-accidents {
@@ -128,8 +182,6 @@
 		.title-box {width: 35%; float: right; padding: 30px;}
 		h4 {font-weight: bold; margin-bottom: 0;}
 	}
-
-	// .main-content {position: relative; z-index: 0;}
 }
 
 .resources { background-color: $light;
@@ -151,7 +203,7 @@
 		padding-left: 10%;
 		position: relative; z-index: 11;
 		margin-top:-50px;
-		h3 {font-weight: bold; margin-top:25px; color: $blue; margin-bottom: 5px;}
+		h3 {font-weight: bold; margin-top:25px; color: $blue; margin-bottom: 5px; font-size: 22px}
 		p {margin-bottom: 10px; padding-left: 20px; font-size: 15px;
 			.res-link{color: $navy; &:hover {color: $br-blue; font-weight: bold;}}}
 
@@ -159,3 +211,6 @@
 				// &:nth-child(2n+2) {float: right;}}
 	}
 }
+
+
+
