--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -1,6 +1,6 @@
 $black: #000;
 $white: #fff;
-$light: #ebebeb;
+$light: #e4e4e4;
 $dark: #1a1a1a;
 $gray: #9d9d9d;
 $offwhite: #f5f4f4;
@@ -18,6 +18,7 @@ $lato: 'Lato', sans-serif;
 
 $sec-padding: 55px 0;
 $fullsec-padding: 55px 75px;
+$content-padding: 30px;
 
 
 // 0478bb
