--- a/app/views/static_pages/motorcycle-accidents.html.erb
+++ b/app/views/static_pages/motorcycle-accidents.html.erb
@@ -11,7 +11,7 @@
 <div class="clearfix"></div>
 
 <!-- <div class="banner"> -->
-<div class="boxes">
+<div class="topic-boxes">
 	<h3>Motorcycle Accident Claims &amp; Serious Injuries</h3>
 	<div class="b1">
 		<p>Motorcycles are the least protected vehicles on the road, which unfortunately leads to higher injury and death rates than those of traditional motorists. Motorcycle accidents typically result in high medical costs, and demand a successful litigation outcome in order to pay for medical expenses.</p>
