--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -22,7 +22,9 @@ a:hover {text-decoration: none;}
 	.no-rpadding-xs {padding-right:0;}
 }
 
-h1, h2, h3, h4, h5 { font-family: $cinzel; line-height: 1.2em; margin-top:0;}
+h1, h2, h3, h4, h5 { font-family: $cinzel; line-height: 1.2em; margin-top:0;
+  &.open {font-family: $open;}
+}
 p, li {font-family: $lato; line-height:1.4em}
 // a,span {font-family: $lato;}
 p {font-size: 16px;}
