--- a/app/views/static_pages/auto-accidents.html.erb
+++ b/app/views/static_pages/auto-accidents.html.erb
@@ -1,24 +1,14 @@
 <% @page_title = "Auto Accidents" %>
 <% @page_description = "New Subject" %>
 
-<div class="cst-header">
-	<div class="title-box">
-		<h4>Noel B. Leonard represents</h4>
-		<h1>Automotive Accident Claims</h1>
+<div class="cst-header filter">
+	<div class="overlay">
+		<div class="title-box">
+			<h4>Noel B. Leonard represents</h4>
+			<h1>Automotive Accident Claims</h1>
+		</div>
 	</div>
 </div>
-
-<div class="banner">
-	<div class="col-md-8 col-md-offset-2">
-		<!-- <h5>Representing serious car accident victims across Southern Alabama</h5> -->
-		<br>
-		<p>
-			Despite the countless advancements and safety improvements from the auto industry over the years, thousands of Alabama residents are injured or killed annually in car accidents. If you suffer from an injury as the result of an auto accident in Alabama, you need an experienced and proven lawyer to fight on your behalf. Noel B. Leonard will fight to ensure you receive the compensation you deserve.
-		</p>
-		<br>
-	</div>
-</div>
-
 
 <!--   Bicycle and Pedestrian Injury Claims
   Distracted Driving Accident Claims
@@ -28,56 +18,60 @@
   Whiplash Injury Claims
  -->
 
- <div class="main-content">
-	 	<!-- <p>
-	 		Despite the countless advancements and safety improvements from the auto industry over the years, millions of Americans, and thousands of Alabama residents, are injured or killed in car accidents each year. If you suffer from an injury as the result of an auto accident in Alabama, you need an experienced and proven lawyer to fight on your behalf. Noel B. Leonard will fight to ensure you receive the compensation you deserve.
-	 	</p> -->
 
-		<p>
-			Dealing with an auto accident is stressful enough on its own. When you have to factor in compensation for an injury, there are practical considerations to think of as well.
-			Collecting damages from an auto accident injury can be an expensive, and often lengthy process. This is why it is essential that you seek legal representation from an expert attorney who will fight to recover your compensation.
-		</p>
+<div class="main-body">
+	<div class="topic-boxes">
+		<div class="intro">
+			<h3>Noel B. Leonard will fight for you.</h3>
+			<p>Attorney Leonard helps accident victims get the results they need to heal and move forward.</p>
+		</div>
 
-		<p>Noel B. Leonard has successfully represented injured drivers, passengers, and accident victims in Alabama for years, helping provide the crucial compensation they needed to pay for accident-related expenses, such as lost wages and medical bills. Noel has also taken on insurance companies, in order to protect clients from the company's attempts to deny rightful accident compensation.</p>
+		<div class="b1">
+			<p>Despite the countless advancements and safety improvements from the auto industry over the years, thousands of Alabama residents are still injured or killed annually in car accidents. If you suffer from an injury as the result of an auto accident in Alabama, you need an experienced and trustworthy lawyer to fight on your behalf.
+			Noel B. Leonard will fight to ensure you receive the compensation you deserve.
+			</p>
+		</div>
 
-		<p>Noel B. Leonard has successfully represented clients in a wide range of auto accident claims, including:<br>
-			Distracted Driving Claims<br>
-			Drunk Driving Claims<br>
-			Hit and Run Accident Claims<br>
-			Whiplash Injury Claims<br>
-			18-Wheeler Accidents<br>
-			And Many More
-		</p>
+		<div class="b2">
+			<p>Dealing with an auto accident is stressful enough on its own. When you have to factor in compensation for an injury, there are practical considerations to think of as well. Collecting damages from an auto accident injury can be an expensive, and often lengthy process. This is why it is essential to seek legal representation from an expert attorney who will fight to recover your compensation.</p>
+		</div>
 
-		<p>
-			Attorney Leonard gets the results to help accident victims heal and move forward.
-			Accidents can happen anywhere, but finding the right attorney does not happen by accident.
-			Noel B. Leonard has helped thousands of Alabama accident victims just like yourself to get the compensation and/or settlement they deserve.
-		</p>
+		<div class="b3">
+			<p>Noel B. Leonard has successfully represented injured drivers, passengers, and accident victims in Alabama for years, helping provide the crucial compensation they needed to pay for accident-related expenses, such as lost wages and medical bills. Noel has also taken on insurance companies, in order to protect clients from the company's attempts to deny rightful accident compensation.</p>
+		</div>
+	</div>
 
-		<p>
-			If you live in Baldwin, Mobile or Escambia County, Foley accident attorney Noel B. Leonard is ready to help you as well.
-			Contact Noel B. Leonard for a legal consultation to start the process of healing from your Alabama auto accident.
-			Call (251) 943-8638 for a consultation or fill in our Case Evaluation Form and we will contact you as soon as possible.
-		</p>
+	<div class="main-content">
+		<div class="s1">
+			<div class="col-md-7 left">
+				<h4><span>Accidents can happen anywhere, but finding the right attorney does not happen by accident.</span></h4>
+				<h3><span>Noel B. Leonard has helped thousands of accident victims in Alabama</span> to get the compensation and/or settlement that they deserve.</h3>
+			</div>
 
+			<div class="col-md-5 right">
+				<p><b>Noel B. Leonard has successfully represented clients in a wide range of auto accident claims, including:</b></p>
+				<ul>
+					<li>Distracted Driving Claims</li>
+					<li>Drunk Driving Claims</li>
+					<li>Hit and Run Accident Claims</li>
+					<li>Whiplash Injury Claims</li>
+					<li>18-Wheeler Accidents</li>
+					<li>And So Many More</li>
+				</ul>
+			</div>
+		</div>
+	</div>
 </div>
 
 
 
-
 		<!-- <p>
-			In recent years, the auto industry has made many safety improvements to vehicles, for everything from better seat belts to better airbags.
-			Despite these advances, millions of Americans, and thousands of Alabama residents, are injured or killed in car accidents every year.
-
-			Every time you step into a vehicle there is a tangible risk that you or a loved one can become the victim of an auto accident.
-			In the event that you are, or have been, injured in an auto accident in Alabama, you need an experienced and proven auto accident lawyer, who will fight on your behalf.
-			Noel B. Leonard Will fight to ensure you receive the compensation you deserve.
-		</p>
-
-
-		<p>
-			While an auto accident is an emotional ordeal that can radically alter your life, there are practical considerations to think of as well.
-			Car accident injuries are expensive, and often lengthy processes, which is why it is essential that you seek legal representation from an expert Alabama accident attorney who fights tooth and nail to recover your compensation.
-			Noel B. Leonard has successfully represented injured Alabama drivers, passengers, and accident victims for years, providing the crucial compensation needed to pay for accident-related expenses such as lost wages and medical bills. Noel has also taken on insurance companies, successfully protecting clients from insurance companies attempting to deny rightful accident compensation.
+			If you live in Baldwin, Mobile or Escambia County, Foley accident attorney Noel B. Leonard is ready to help you as well.
+			Contact Noel B. Leonard for a legal consultation to start the process of healing from your Alabama auto accident.
+			Call (251) 943-8638 for a consultation or fill in our Case Evaluation Form and we will contact you as soon as possible.
 		</p> -->
+
+
+
+
+
