--- a/app/assets/stylesheets/_mixins.scss
+++ b/app/assets/stylesheets/_mixins.scss
@@ -48,6 +48,16 @@
     z-index: -1;
 }
 
+@mixin after () {
+    content: "";
+    right: 0;
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height:100%;
+    z-index: -1;
+}
+
 @mixin ease() {
     -webkit-transition: 0.5s;
     -moz-transition: 0.5s;
