--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -18,53 +18,63 @@
 	}
 }
 
+.pa-header {@include sec-bgimage(); background-image: url(image_path('traffic-blur.jpg')); height: 120px;
+		h1 { color: $white; font-weight: bold; @include tshadow($black);}
+		.overlay {@include sec-default(); height: 100%; padding-top: 60px; padding-left: 60px; background-color: rgba($black, .6)}
+	}
+
 .main-content {
 	@include sec-default();
 	padding: $fullsec-padding;
 	&.less {padding: $sec-padding;}
 }
 
-.claim-info-scroll {
-  width: 25%;
-  display: none;
-  position: fixed;
-  bottom: 15%;
-  top:20%;
-  vertical-align: middle;
-  right: 5%;
-  background-color: $dark;
-  color: $white;
-  z-index: 100;
-  padding: 40px 30px;
-  box-shadow: 10px 15px 20px rgba($black, .4);
-
-  &.noscroll {
-	  position: static;
-		float: right;
-	  width: 30%;
-  }
+.main-wrap {@include sec-default(); padding: 0 60px; background-color: $light;}
+.body-content { @include sec-default(); background-color: $offwhite;
+	.s1, .s2, .s3 {@include sec-default(); background-color: $offwhite; padding: $content-padding;}
 }
 
-.slant-section {
-	@include sec-default();
-	position: relative;
-	padding: 130px 0;
-	top: 0;
-	clear: both;
 
-	&:before {
-		width: 50%;
-		border-bottom: 0 solid $navy;
-		border-top: 600px solid $navy;
-		border-left: 0 solid transparent;
-		border-right: 100px solid transparent;
-		content: "";
-		height: 100%;
-		top: 0;
-		position: absolute;
-	}
-}
+// .claim-info-scroll {
+//   width: 25%;
+//   display: none;
+//   position: fixed;
+//   bottom: 15%;
+//   top:20%;
+//   vertical-align: middle;
+//   right: 5%;
+//   background-color: $dark;
+//   color: $white;
+//   z-index: 100;
+//   padding: 40px 30px;
+//   box-shadow: 10px 15px 20px rgba($black, .4);
 
+//   &.noscroll {
+// 	  position: static;
+// 		float: right;
+// 	  width: 30%;
+//   }
+// }
+
+// .slant-section {
+// 	@include sec-default();
+// 	position: relative;
+// 	padding: 130px 0;
+// 	top: 0;
+// 	clear: both;
+
+// 	&:before {
+// 		width: 50%;
+// 		border-bottom: 0 solid $navy;
+// 		border-top: 600px solid $navy;
+// 		border-left: 0 solid transparent;
+// 		border-right: 100px solid transparent;
+// 		content: "";
+// 		height: 100%;
+// 		top: 0;
+// 		position: absolute;
+// 	}
+// }
 
 .topic-boxes {@include sec-default(); padding: 40px 60px; background-color: $white;
 	.intro {width: 80%; @include center-block();text-align: center; margin-bottom:30px; }
@@ -75,8 +85,6 @@
 	}
 	.b2 {margin: 0 15px;}
 }
-
-
 
 .home {
 	.site-intro{
@@ -174,7 +182,6 @@
 		  p{line-height: 1.5em;}
 		}
 	}
-
 }
 
 .auto-accidents {
@@ -202,11 +209,42 @@
 	}
 }
 
-
 .truck-claims { @include sec-default();
-	.cst-header { background-color: $tan; background-image: url(image_path('semi.jpg')); height: 300px; background-size: 65%;background-position: left center;
-		.title-box {width: 35%; float: right; padding: 30px;}
-		h4 {font-weight: bold; margin-bottom: 0;}
+
+
+	.claim-info {
+	  width: 35%;
+	  background-color: $lt-blue;
+	  color: $white;
+	  padding: 30px;
+	  box-shadow: 5px 7px 15px rgba($black, .2);
+	  h4 {line-height: 1.5em; color: $dark; }
+	}
+
+	.topic-boxes { position: relative; z-index: 0;padding:30px 50px;
+		background-position: top right; background-size: 35%; background-repeat: no-repeat; background-image: url(image_path('semi-claim.jpg'));
+		&::before {@include after (); width: 35%; background-color: rgba($dark, .9);}
+		.b1, .b2, .b3 {background: transparent; border:none;}
+		.b1, .b2 {padding-left: 5px }
+		.b3.right {color: $white; float: right; font-size: 18px; padding-left: 10px; padding-right: 0px; span { color: $lt-blue;}}
+		p.bold {font-weight: bold; margin-bottom:25px;}
+	}
+
+	.banner {@include sec-default(); text-align: center; padding-bottom: 30px; h3 {color: $blue; font-weight: bold;}}
+	.s2 {
+		.block1, .block2 {width: 45%; display: inline-block; margin: auto; float: left;}
+		.block2 {background-color: $white; padding: 20px 30px ; float: none; margin-left: 15px;
+			ul {padding-left: 25px;}
+			li {color: $blue; font-size: 16px; margin-top: 10px;}
+		}
+
+		.block1 { p{font-size: 17px; color: $white;}
+			.a, .b {@include sec-default(); background-color: $lt-blue; padding: 35px 45px 25px; position: relative; z-index: 0;
+				@include sec-bgimage(); background-image: url(image_path('cargo.jpg')); background-position: center center;
+				&::before {@include before(); background-color: rgba($navy, .9); }
+			}
+			.a{margin-bottom: 25px; background-image: url(image_path('semi-wreck.jpg'));}
+		}
 	}
 }
 
