--- a/app/views/static_pages/18wheeler-accidents.html.erb
+++ b/app/views/static_pages/18wheeler-accidents.html.erb
@@ -2,50 +2,74 @@
 <% @page_description = "New Subject" %>
 
 <div class="truck-claims">
-		<div class="cst-header">
+	<div class="pa-header">
+		<div class="overlay">
 			<div class="title-box">
-				<!-- <h4>Noel B. Leonard</h4> -->
 				<h1>18-Wheeler Accident Claims</h1>
 			</div>
 		</div>
+	</div>
 
 		<!-- 	Claims Against the Driver
 		  Claims Against the Trucking Company
 		  Faulty Equipment or Safety Violation Claims
 		  Hazardous Material &amp; Dangerous Cargo Claims -->
 
-	<div class="main-content less">
-		<div class="container">
-			<div class="col-md-8">
-				<p>While all vehicles on Alabama roads can be deadly if they are defective or driven negligently, 18 wheelers are in a class all their own.
-				If an ordinary car is analogous to the danger of a bullet, then an 18 wheeler is a missile. 18 Wheelers are hulking, unwieldy vehicles that can — and do — wreak inordinate amounts of havoc on Alabama roads. For this reason, accidents involving 18 wheelers often lead to serious injury and death.</p>
-
-				<p>When drivers operate 18 wheelers negligently, they need to be held accountable. However, while driver negligence is often a major factor in these accidents, it is not the sole reason they occur.</p>
-
-				<p>Defective and faulty equipment can also be the reason for a devastating 18 wheeler accident. In other cases, hazardous materials and cargo on the truck itself can be the cause of the issue. These factors lead to one simple truth: 18 wheeler litigation can grow in complexity quickly. That is why it is essential for Alabama 18 wheeler victims to receive legal assistance for their Alabama accident.</p>
-
-				<p>This requires an attorney who is familiar with both state and federal law. Alabama trucking companies are required to comply with federal safety regulations that are meant to enhance the safety of both the roads and the citizens who drive on them. If any of these federal regulations are violated, you may be entitled to file a lawsuit against the trucking company, even if the driver did not behave negligently. Noel B. Leonard has the experience necessary to determine whether such a violation occurred.</p>
-
-				<h4>Noel B. Leonard Will Fight to Get You the Compensation and Justice You Deserve</h4>
-				In short, Noel B. Leonard has successfully represented 18 wheeler accident victims when pursuing claims against the following:
-					Drunk Drivers
-					Negligent Drivers
-					Claims Against the Trucking Company
-					Claims Against Auto Manufacturers and Their Defective Equipment
-					Federal Safety Violation Claims
-					Hazardous Material Claims
-					Dangerous Cargo Claims
-					And More
-
-				<div class="clearfix"></div><br>
+<div class="main-wrap">
+	<div class="body-content">
+		<div class="topic-boxes">
+			<div class="b1">
+				<h4>18 Wheeler Accidents</h4>
+				<p>Any vehicle on the road can be deadly if it is defective or driven negligently. Due to their size and strength, however, 18 wheelers are in a class all their own. Accidents involving 18 wheelers commonly lead to serious injury or death. When drivers operate 18 wheelers negligently, they should be held accountable.</p>
 			</div>
 
-			<div class="claim-info-scroll noscroll">
-				<p>If you live in Mobile, Baldwin, or Escambia County, and have been involved in an 18 wheeler accident, Foley attorney, Noel B. Leonard is ready to pursue justice on behalf of you or a dearly departed loved one.</p>
-				<p>Contact Noel B. Leonard now, to schedule a legal consultation. Discuss the facts of your 18 wheeler accident case, and receive the settlement you deserve to begin the healing you need. </p>
-				<p>Call us today (251) 943-8638, or fill out our Case Evaluation Form, and we will contact you as soon as possible.</p>
+			<div class="b2">
+				<h4>Accident Factors</h4>
+				<p> Driver negligence is often a major factor in these accidents, but it is not the sole reason they occur. Defective and faulty equipment, as well as hazardous materials and cargo on the actual trucks, have also been known to cause these accidents.</p>
+			</div>
+
+			<div class="b3 right">
+				<p class="bold">These factors lead to one simple truth:<br> <span>18 wheeler litigation can grow in complexity quickly.</span></p>
+				<p>That is why it is essential for 18 wheeler victims in Alabama to receive legal assistance with their accident. This requires an attorney who is familiar with both state and federal law.</p>
 			</div>
 		</div>
+
+		<div class="s2">
+			<div class="banner">
+				<h3>What Should You Know?</h3>
+				<h4>Noel B. Leonard Will Fight to Get You the Compensation and Justice You Deserve</h4>
+			</div>
+
+			<div class="col-md-10 col-md-offset-1">
+				<div class="block1">
+					<div class="a">
+						<p>Alabama trucking companies are required to comply with federal safety regulations meant to enhance the safety of both the roads, and the citizens who drive on them.</p>
+					</div>
+					<div class="b">
+						<p><b>If any of these federal regulations are violated, you may be entitled to file a lawsuit against the trucking company. Even if the driver did not behave negligently. Noel B. Leonard has the experience necessary to determine whether such a violation occurred.</b></p>
+					</div>
+				</div>
+
+				<div class="block2">
+					<p>Attorney Leonard has successfully represented 18-wheeler accident victims when pursuing claims against the following:</p>
+					<ul>
+						<li>Drunk Drivers</li>
+						<li>Negligent Drivers</li>
+						<li>Claims Against the Trucking Company</li>
+						<li>Claims Against Auto Manufacturers and Their Defective Equipment</li>
+						<li>Federal Safety Violation Claims</li>
+						<li>Hazardous Material Claims</li>
+						<li>Dangerous Cargo Claims</li>
+						<li>And Many More</li>
+					</ul>
+				</div>
+			</div>
+
+				<!-- <p>If you live in Mobile, Baldwin, or Escambia County, and have been involved in an 18 wheeler accident, Foley attorney, Noel B. Leonard is ready to pursue justice on behalf of you or a dearly departed loved one.</p>
+				<p>Contact Noel B. Leonard now, to schedule a legal consultation. Discuss the facts of your 18 wheeler accident case, and receive the settlement you deserve to begin the healing you need. </p>
+				<p>Call us today (251) 943-8638, or fill out our Case Evaluation Form, and we will contact you as soon as possible.</p>-->
+		</div>
+
 	</div>
 </div>
 
@@ -53,6 +77,4 @@
 
 
 
-
-
-
+	<!-- 	<p>Any vehicle on the road can be deadly if it is defective or driven negligently. Due to their size and strength, however, 18 wheelers are in a class all their own. Accidents involving 18 wheelers often lead to serious injury or death. When drivers operate 18 wheelers negligently, they need to be held accountable. However, while driver negligence is often a major factor in these accidents, it is not the sole reason they occur. Defective and faulty equipment can also be the reason for a devastating 18 wheeler accident. In other cases, hazardous materials and cargo on the truck itself can be the cause of the issue. -->
