new about style

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -8,6 +8,7 @@ $hcolor: #252525;
 $blue: #0060af;
 // $navy: #062f45;
 $navy:darken($blue, 25%);
+$dk-blue: #022444;
 $br-blue: #00aeff;
 $lt-blue: #b2cfe7;
 $tan: #dbd3c7;
