--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,4 +1,4 @@
-<header class="header">
+<!-- <header class="header">
   <div id="top-bar">
       <div class="block3">
       <h5>Serving Baldwin, Mobile, &amp; Escambia Counties in Alabama</h5></div>
@@ -35,10 +35,6 @@
           </li>
         </ul>
       </div>
-
-      <!-- <div class="block-2">
-        <h5>218 N. Alston Street | Foley, AL 36535</h5>
-      </div> -->
   </div>
 
   <div class="main-header">
@@ -69,5 +65,84 @@
         </a>
       </div>
     </div>
+  </div>
+</header> -->
+
+
+
+<header class="header-alt">
+  <div id="top-bar">
+    <div class="tb-block">
+      <ul class="social-links">
+        <li>
+          <%= link_to '/fb', target: '_blank' do %>
+            <i class="fa fa-facebook"></i>
+          <% end %>
+        </li>
+
+        <li>
+          <%= link_to '/twitter', target: '_blank' do %>
+            <i class="fa fa-twitter"></i>
+          <% end %>
+        </li>
+
+        <li>
+          <%= link_to '/linkedin', target: '_blank' do %>
+            <i class="fa fa-linkedin"></i>
+          <% end %>
+        </li>
+
+        <li>
+          <%= link_to '/twitter', target: '_blank' do %>
+            <i class="fa fa-twitter"></i>
+          <% end %>
+        </li>
+
+        <li>
+          <%= link_to '/youtube', target: '_blank' do %>
+            <i class="fa fa-youtube"></i>
+          <% end %>
+        </li>
+      </ul>
+
+      <span>|</span>
+
+      <h5>Serving Baldwin, Mobile, &amp; Escambia Counties in Alabama</h5>
+    </div>
+  </div>
+
+  <div class="main-header">
+    <div class="logo-block">
+      <%= link_to(image_tag( 'logo-nbl.png', alt: 'Noel Leonard Attorney - Logo', class: 'img-responsive logo-img'), root_path ) %>
+      <!-- <h3>Noel B. Leonard Attorney, LLC</h3> -->
+    </div>
+
+    <div class="main-block">
+      <h4><span>Call Today:</span><br>  <div class="call-link"><%= number_to_phone(2519438638, delimiter: '-') %></div></h4>
+      <!-- <h4 class="address">218 N. Alston Street<br> Foley, AL 36535</h4> -->
+      <%= link_to('/espanol', class: 'esp-link' ) do %>
+          <h4>habla espanol? <br>haga clic aqui</h4>
+      <% end %>
+    </div>
+  </div>
+
+  <div class="mega-tab">
+    <ul class="megamenu-parent menu-zoom hidden-xs">
+      <li class="menu-item"><%= link_to "Home", root_path %></li>
+      <li class="menu-item"><%= link_to "Motorcycle Accidents", motorcycle_accidents_path %></li>
+      <li class="menu-item"><%= link_to "Auto Accidents", auto_accidents_path %></li>
+      <li class="menu-item"><%= link_to "18-Wheeler Accidents", trucker_accidents_path %></li>
+      <li class="menu-item"><%= link_to "About", about_path %></li>
+      <li class="menu-item"><%= link_to "Contact Us", contact_path %></li>
+      <li class="menu-item"><%= link_to "Resources", resources_path %></li>
+    </ul>
+  </div>
+
+  <div>
+    <a href="#" id="offcanvas-toggler">
+        <span></span>
+        <span></span>
+        <span></span>
+    </a>
   </div>
 </header>
