committing before generating mailer and form

--- a/app/views/static_pages/resources.html.erb
+++ b/app/views/static_pages/resources.html.erb
@@ -8,65 +8,70 @@
 <div class="clearfix"></div>
 
 <div class="resource-list">
-	<div class="list l1">
-		<h3>Alabama State Judicial &amp; Legal Resources</h3>
-			<p><a href="http://judicial.alabama.gov/" class="res-link" target="_blank">Alabama Judicial System</a></p>
-			<p><a href="http://judicial.alabama.gov/supreme.cfm" class="res-link" target="_blank">Supreme Court of Alabama</a></p>
-			<p><a href="http://judicial.alabama.gov/civil.cfm" class="res-link" target="_blank">Alabama Court of Civil Appeals</a></p>
-			<p><a href="http://judicial.alabama.gov/criminal.cfm" class="res-link" target="_blank">Alabama Court of Criminal Appeals</a></p>
-			<p><a href="http://codes.lp.findlaw.com/alcode" class="res-link" target="_blank">Alabama Code</a></p>
-			<p><a href="http://www.acadv.org/" class="res-link" target="_blank">Alabama Coalition Against Domestic Violence</a></p>
-			<p><a href="http://childsupport.alacourt.gov/default.aspx" class="res-link" target="_blank">Alabama Child Support Information</a></p>
-			<p><a href="http://www.dot.state.al.us/" class="res-link" target="_blank">Alabama Department of Transportation</a></p>
-			<p><a href="https://safety.aladata.com/" class="res-link" target="_blank">Alabama Traffic Crash Data from 2004 – 2015</a></p>
-			<p><a href="http://www.alabamaadministrativecode.state.al.us/" class="res-link" target="_blank">Alabama Administrative Code</a></p>
-			<!-- <a href="http://www.archives.state.al.us/" class="res-link" target="_blank" class="broken_link">Alabama Department of Archives and History</a> -->
-			<p><a href="http://www.alsd.uscourts.gov/" class="res-link" target="_blank">Alabama District Court</a></p>
-			<p><a href="http://www.alacourt.gov/JudicialCircuits.aspx" class="res-link" target="_blank">Alabama County Judicial Circuits</a></p>
+	<div class="col-md-6">
+		<div class="list">
+			<h3 class="tmargin0">Alabama State Judicial &amp; Legal Resources</h3>
+				<p><a href="http://judicial.alabama.gov/" class="res-link" target="_blank">Alabama Judicial System</a></p>
+				<p><a href="http://judicial.alabama.gov/supreme.cfm" class="res-link" target="_blank">Supreme Court of Alabama</a></p>
+				<p><a href="http://judicial.alabama.gov/civil.cfm" class="res-link" target="_blank">Alabama Court of Civil Appeals</a></p>
+				<p><a href="http://judicial.alabama.gov/criminal.cfm" class="res-link" target="_blank">Alabama Court of Criminal Appeals</a></p>
+				<p><a href="http://codes.lp.findlaw.com/alcode" class="res-link" target="_blank">Alabama Code</a></p>
+				<p><a href="http://www.acadv.org/" class="res-link" target="_blank">Alabama Coalition Against Domestic Violence</a></p>
+				<p><a href="http://childsupport.alacourt.gov/default.aspx" class="res-link" target="_blank">Alabama Child Support Information</a></p>
+				<p><a href="http://www.dot.state.al.us/" class="res-link" target="_blank">Alabama Department of Transportation</a></p>
+				<p><a href="https://safety.aladata.com/" class="res-link" target="_blank">Alabama Traffic Crash Data from 2004 – 2015</a></p>
+				<p><a href="http://www.alabamaadministrativecode.state.al.us/" class="res-link" target="_blank">Alabama Administrative Code</a></p>
+				<!-- <a href="http://www.archives.state.al.us/" class="res-link" target="_blank" class="broken_link">Alabama Department of Archives and History</a> -->
+				<p><a href="http://www.alsd.uscourts.gov/" class="res-link" target="_blank">Alabama District Court</a></p>
+				<p><a href="http://www.alacourt.gov/JudicialCircuits.aspx" class="res-link" target="_blank">Alabama County Judicial Circuits</a></p>
+		</div>
+
+		<div class="list">
+			<h3>Baldwin County Resources</h3>
+				<p><a href="http://baldwincountyal.gov/departments/planning-zoning/planning-and-zoning-ordinances" class="res-link" target="_blank">Baldwin County Zoning Ordinances</a></p>
+				<p><a href="http://baldwincountyal.gov/departments/planning-zoning" class="res-link" target="_blank">Baldwin County Planning &amp; Zoning Department</a></p>
+				<p><a href="http://baldwincountyal.gov/Goverment/revenue/local-law-index" class="res-link" target="_blank">Baldwin County – Local Laws Index</a></p>
+				<p><a href="http://codes.lp.findlaw.com/alcode/45/2" class="res-link" target="_blank">Baldwin County – Alabama Code</a></p>
+				<p><a href="http://28jc.alacourt.gov/" class="res-link" target="_blank">Baldwin County Judicial Circuit</a></p>
+				<p><a href="http://baldwincountyal.gov/Goverment/revenue/search-records" class="res-link" target="_blank">Baldwin County Public Records</a></p>
+		</div>
 	</div>
 
-	<div class="list l2">
-		<h3>Baldwin County Resources</h3>
-			<p><a href="http://baldwincountyal.gov/departments/planning-zoning/planning-and-zoning-ordinances" class="res-link" target="_blank">Baldwin County Zoning Ordinances</a></p>
-			<p><a href="http://baldwincountyal.gov/departments/planning-zoning" class="res-link" target="_blank">Baldwin County Planning &amp; Zoning Department</a></p>
-			<p><a href="http://baldwincountyal.gov/Goverment/revenue/local-law-index" class="res-link" target="_blank">Baldwin County – Local Laws Index</a></p>
-			<p><a href="http://codes.lp.findlaw.com/alcode/45/2" class="res-link" target="_blank">Baldwin County – Alabama Code</a></p>
-			<p><a href="http://28jc.alacourt.gov/" class="res-link" target="_blank">Baldwin County Judicial Circuit</a></p>
-			<p><a href="http://baldwincountyal.gov/Goverment/revenue/search-records" class="res-link" target="_blank">Baldwin County Public Records</a></p>
+	<div class="col-md-6">
+		<div class="list">
+			<h3 class="tmargin0">Escambia County Resources</h3>
+				<!-- <a href="http://www.co.escambia.al.us/court.html" class="res-link" target="_blank" class="broken_link">Escambia County Courts</a> -->
+				<p><a href="http://www.towncourtlisting.com/wiki/index.php?title=21st_Judicial_Circuit_of_Alabama_-_Escambia_County_Courthouse,_Escambia_County,_Alabama" class="res-link" target="_blank">Escambia County Judicial Circuit</a></p>
+		</div>
+
+		<div class="list">
+			<h3>Mobile County Resources</h3>
+				<p><a href="http://probate.mobilecountyal.gov/" class="res-link" target="_blank">Mobile County Probate Court</a></p>
+				<p><a href="http://www.alsd.uscourts.gov/" class="res-link" target="_blank">United States District Court – Southern District of Alabama</a></p>
+				<p><a href="https://www.municode.com/library/al/mobile/codes/code_of_ordinances" class="res-link" target="_blank">Mobile County Ordinances</a></p>
+		</div>
+
+		<div class="list">
+			<h3>City of Foley Resources</h3>
+				<p><a href="https://www.municode.com/library/al/foley/codes/code_of_ordinances" class="res-link" target="_blank">City of Foley – Code of Ordinances</a></p>
+				<p><a href="http://www.cityoffoley.org/CityServices/PoliceDepartment.aspx" class="res-link" target="_blank">City of Foley PD</a></p>
+		</div>
+
+		<div class="list">
+			<h3>City of Mobile Resources</h3>
+				<p><a href="https://www.municode.com/library/al/mobile/codes/code_of_ordinances" class="res-link" target="_blank">City of Mobile – Code of Ordinances</a></p>
+				<!-- <a href="http://www.mobilepd.org/records_reports.php" class="res-link" target="_blank" class="broken_link">City of Mobile PD</a> -->
+		</div>
+
+		<div class="list">
+			<h3>City of Atmore Resources</h3>
+				<p><a href="http://www.cityofatmore.com/content.asp?id=138666" class="res-link" target="_blank">City of Atmore PD</a></p>
+				<p><a href="https://www.municode.com/library/al/atmore/codes/code_of_ordinances" class="res-link" target="_blank">City of Atmore – Code of Ordinances</a></p>
+		</div>
 	</div>
 
-	<div class="list l3">
-		<h3>Escambia County Resources</h3>
-			<!-- <a href="http://www.co.escambia.al.us/court.html" class="res-link" target="_blank" class="broken_link">Escambia County Courts</a> -->
-			<p><a href="http://www.towncourtlisting.com/wiki/index.php?title=21st_Judicial_Circuit_of_Alabama_-_Escambia_County_Courthouse,_Escambia_County,_Alabama" class="res-link" target="_blank">Escambia County Judicial Circuit</a></p>
+	<div class="clearfix"></div>
+	<div class="row">
+		<div class="border-text"><p>Call us now to schedule a consultation (251) 943-8638 or fill in our <a href="http://www.attorney-leonard.com/contact-us/">Case Evaluation Form</a>, and we will contact you as soon as possible.</p></div>
 	</div>
-
-	<div class="list l4">
-		<h3>Mobile County Resources</h3>
-			<p><a href="http://probate.mobilecountyal.gov/" class="res-link" target="_blank">Mobile County Probate Court</a></p>
-			<p><a href="http://www.alsd.uscourts.gov/" class="res-link" target="_blank">United States District Court – Southern District of Alabama</a></p>
-			<p><a href="https://www.municode.com/library/al/mobile/codes/code_of_ordinances" class="res-link" target="_blank">Mobile County Ordinances</a></p>
-	</div>
-
-	<div class="list l5">
-		<h3>City of Foley Resources</h3>
-			<p><a href="https://www.municode.com/library/al/foley/codes/code_of_ordinances" class="res-link" target="_blank">City of Foley – Code of Ordinances</a></p>
-			<p><a href="http://www.cityoffoley.org/CityServices/PoliceDepartment.aspx" class="res-link" target="_blank">City of Foley PD</a></p>
-	</div>
-
-	<div class="list l6">
-		<h3>City of Mobile Resources</h3>
-			<p><a href="https://www.municode.com/library/al/mobile/codes/code_of_ordinances" class="res-link" target="_blank">City of Mobile – Code of Ordinances</a></p>
-			<!-- <a href="http://www.mobilepd.org/records_reports.php" class="res-link" target="_blank" class="broken_link">City of Mobile PD</a> -->
-	</div>
-
-	<div class="list l7">
-		<h3>City of Atmore Resources</h3>
-			<p><a href="http://www.cityofatmore.com/content.asp?id=138666" class="res-link" target="_blank">City of Atmore PD</a></p>
-			<p><a href="https://www.municode.com/library/al/atmore/codes/code_of_ordinances" class="res-link" target="_blank">City of Atmore – Code of Ordinances</a></p>
-	</div>
-
-	<div class="clearfix"></div><br><br>
-		Call us now to schedule a consultation (251) 943-8638 or fill in our
-		<a href="http://www.attorney-leonard.com/contact-us/">Case Evaluation Form</a>, and we will contact you as soon as possible.
 </div>
