--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -270,16 +270,18 @@
 		width: 85%;
 		@include center-block();
 		background-color: $white;
-		padding:20px 0;
-		padding-left: 10%;
+		// padding: 20px 0;
 		position: relative; z-index: 11;
 		margin-top:-50px;
-		h3 {font-weight: bold; margin-top:25px; color: $blue; margin-bottom: 5px; font-size: 22px}
-		p {margin-bottom: 10px; padding-left: 20px; font-size: 15px;
+		h3 {font-weight: bold; margin-top:25px; color: $blue; margin-bottom: 5px; font-size: 22px;
+			&.tmargin0 { margin-top: 0; }
+		}
+		.list {padding-left:70px;
+			p {margin-bottom: 10px; padding-left: 20px; font-size: 15px;
+		}
 			.res-link{color: $navy; &:hover {color: $br-blue; font-weight: bold;}}}
 
-			// .list {display: inline-block; width: 48%; float: left;
-				// &:nth-child(2n+2) {float: right;}}
+		.border-text { width:85%; @include center-block(); margin: 25px auto; padding: 15px 0 10px; text-align: center; border-top:1px solid #dfdfdf; border-bottom:1px solid #dfdfdf;}
 	}
 }
 
